create: create swiper 2nd & 3d slide

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -46,13 +48,26 @@
       <div class="hero-container">
         <div class="swiper-container">
           <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
+          <div class="swiper-wrapper hero-wrapper">
             <!-- Slides -->
             <div class="swiper-slide hero__slide">
-              <img src="img/hero-bg.png" alt="" />
+              <img src="img/hero-bg-1.png" alt="" class="hero__image" />
+              <h1 class="hero__title">
+                Микросейсмические исследования нефтегазоносности геологических
+                объектов
+              </h1>
+              <a href="#" class="hero__link">
+                <button class="hero__button">Подробнее</button>
+              </a>
             </div>
-            <div class="swiper-slide hero__slide">Slide 2</div>
-            <div class="swiper-slide hero__slide">Slide 3</div>
+            <div class="swiper-slide hero__slide">
+              <img src="img/hero-bg-2.jpg" alt="" class="hero__image" />
+              <h1 class="hero__title">Мы - профессионалы своего дела!</h1>
+            </div>
+            <div class="swiper-slide hero__slide">
+              <img src="img/hero-bg-3.jpg" alt="" class="hero__image" />
+              <h1 class="hero__title">Мы открыты к сотрудничеству!</h1>
+            </div>
           </div>
 
           <!-- If we need navigation buttons -->
