--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ООО "СИГМА"- Микросейсмические исследования скважин</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -19,7 +19,7 @@
     <header class="header">
       <div class="header-container">
         <a href="#" class="header__link">
-          <img class="header__logo" src="img/logo.png" alt="logo/>
+          <img class="header__logo" src="img/logo.png" alt="logo/" />
         </a>
 
         <nav class="navbar">
@@ -56,9 +56,7 @@
                 Микросейсмические исследования нефтегазоносности геологических
                 объектов
               </h1>
-              <a href="#" class="hero__link">
-                <button class="hero__button">Подробнее</button>
-              </a>
+              <a href="#" class="hero__link"> Подробнее </a>
             </div>
             <div class="swiper-slide hero__slide">
               <img src="img/hero-bg-2.jpg" alt="" class="hero__image" />
@@ -74,6 +72,50 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         </div>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="about-container">
+        <h1 class="about__title">О нас</h1>
+        <div class="about__wrapper">
+          <div class="about__wrapper--text">
+            <p class="about__description">
+              Основанная в 2014 году Михайловым Сергеем Александровичем компания
+              <span class="about__name">ООО “СИГМА”</span> является ведущей
+              компанией по проведению пассивного микросейсмического мониторинга
+            </p>
+            <p class="about__text">
+              Компания ООО «СИГМА» занимается проведением полевых геофизических
+              исследований методом МСИ, пассивная сейсморазведка, а так же
+              разработкой программного обеспечения для обработки полученной
+              первичной полевой информации.
+            </p>
+          </div>
+
+          <div class="about__wrapper--images">
+            <div class="about__image-wrapper">
+              <a href="#" class="about__link">Метод МСИ</a>
+              <img class="about__image" src="img/about-image-2.png" alt="" />
+            </div>
+
+            <div class="about__image-wrapper">
+              <a href="#" class="about__link">Метод ГРП</a>
+              <img class="about__image" src="img/about-image-1.png" alt="" />
+            </div>
+            <div class="about__image-wrapper">
+              <a href="#" class="about__link">Метод СВАН</a>
+              <img class="about__image" src="img/about-image-3.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="subscribe">
+      <div class="subscribe-container">
+        <h1 class="subscribe__title">Мы всегда открыты к сотрудничеству!</h1>
+        <a href="#" class="subscribe__link">СВЯЗАТЬСЯ С НАМИ</a>
       </div>
     </section>
     <script src="js/swiper-bundle.min.js"></script>
