--- a/index.html
+++ b/index.html
@@ -1,169 +1,164 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ООО "СИГМА"- Микросейсмические исследования скважин</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header-container">
-        <a href="#" class="header__link">
-          <img class="header__logo" src="img/logo.png" alt="logo/" />
-        </a>
+</head>
 
-        <nav class="navbar">
-          <ul class="navbar__list">
-            <li class="navbar__item">
-              <a href="#" class="navbar__link">Главная</a>
-            </li>
-            <li class="navbar__item">
-              <a href="#" class="navbar__link">О компании</a>
-            </li>
-            <li class="navbar__item">
-              <a href="#" class="navbar__link">Наши технологии</a>
-            </li>
-            <!-- <li class="navbar__item">
-              <a href="#" class="navbar__link">Отзывы</a>
-            </li> -->
-            <li class="navbar__item">
-              <a href="#" class="navbar__link">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+<body>
+    <header class="header">
+        <div class="header-container">
+            <a href="#" class="header__link">
+                <img class="header__logo" src="img/logo-blue.svg" alt="logo" />
+            </a>
+
+            <nav class="navbar">
+                <ul class="navbar__list">
+                    <li class="navbar__item">
+                        <a href="#" class="navbar__link">Главная</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="#about" class="navbar__link">О компании</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="#" class="navbar__link">Наши технологии</a>
+                    </li>
+
+                    <li class="navbar__item">
+                        <a href="#contacts" class="navbar__link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <button class="menu-button">
+              <span class=" menu-button--line"></span>
+              <span class=" menu-button--line"></span>
+              <span class=" menu-button--line"></span>
+            </button>
+        </div>
     </header>
     <!--.header-->
     <section class="hero">
-      <div class="hero-container">
-        <div class="swiper-container">
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper hero-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide hero__slide">
-              <img src="img/hero-bg-1.png" alt="" class="hero__image" />
-              <h1 class="hero__title">
-                Микросейсмические исследования нефтегазоносности геологических
-                объектов
-              </h1>
-              <a href="#" class="hero__link"> Подробнее </a>
-            </div>
-            <div class="swiper-slide hero__slide">
-              <img src="img/hero-bg-2.jpg" alt="" class="hero__image" />
-              <h1 class="hero__title">Мы - профессионалы своего дела!</h1>
-            </div>
-            <div class="swiper-slide hero__slide">
-              <img src="img/hero-bg-3.jpg" alt="" class="hero__image" />
-              <h1 class="hero__title">Открыты к сотрудничеству!</h1>
-            </div>
-          </div>
+        <div class="hero-container">
+            <div class="swiper-container hero__container">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper hero-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide hero__slide--first">
 
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+                        <div class="hero__title hero__title--first">
+                            Микросейсмические исследования нефтегазоносности геологических объектов
+                        </div>
+
+                        <button class="hero__link"> Подробнее </a>
+                    </div>
+                    <div class="swiper-slide hero__slide--second">
+
+                        <div class="hero__title hero__title--second">Мы - профессионалы своего дела!</div>
+                    </div>
+                    <div class="swiper-slide hero__slide--third">
+
+                        <div class="hero__title hero__title--third">Открыты к сотрудничеству!</div>
+                    </div>
+                </div>
+
+                <div class="swiper-button-prev hero__swiper-button"></div>
+                <div class="swiper-button-next hero__swiper-button" "></div>
+            </div>
         </div>
-      </div>
     </section>
     <!--.hero-->
 
-    <section class="about">
-      <div class="about-container">
-        <h3 class="about__title">О нас</h3>
-        <div class="about__wrapper">
-          <div class="about__wrapper--text">
-            <p class="about__description">
-              Основанная в 2014 году Михайловым Сергеем Александровичем компания
-              <span class="about__name">ООО “СИГМА”</span> является ведущей
-              компанией по проведению пассивного микросейсмического мониторинга
-            </p>
-            <p class="about__text">
-              Компания ООО «СИГМА» занимается проведением полевых геофизических
-              исследований методом МСИ, пассивная сейсморазведка, а так же
-              разработкой программного обеспечения для обработки полученной
-              первичной полевой информации.
-            </p>
-          </div>
+    <section class="about" id="about">
+        <div class="about-container ">
+            <h3 class="about__title ">О нас</h3>
+            <div class="about__wrapper ">
+                <div class="about__wrapper--text ">
+                    <p class="about__description ">
+                        Основанная в 2014 году Михайловым Сергеем Александровичем компания
+                        <span class="about__name ">ООО “СИГМА”</span> является ведущей компанией по проведению пассивного микросейсмического мониторинга
+                    </p>
+                    <p class="about__text ">
+                        Компания ООО «СИГМА» занимается проведением полевых геофизических исследований методом МСИ, пассивная сейсморазведка, а так же разработкой программного обеспечения для обработки полученной первичной полевой информации.
+                    </p>
+                </div>
 
-          <div class="about__wrapper--images">
-            <div class="about__image-wrapper">
-              <a href="#" class="about__link">Метод МСИ</a>
-              <img class="about__image" src="img/about-image-2.png" alt="" />
-            </div>
+                <div class="about__wrapper--images ">
+                    <div class="about__image-wrapper ">
+                        <a href="# " class="about__link ">Метод МСИ</a>
+                        <img class="about__image " src="img/about-image-2.png " alt=" " />
+                    </div>
 
-            <div class="about__image-wrapper">
-              <a href="#" class="about__link">Метод ГРП</a>
-              <img class="about__image" src="img/about-image-1.png" alt="" />
+                    <div class="about__image-wrapper ">
+                        <a href="# " class="about__link ">Метод ГРП</a>
+                        <img class="about__image " src="img/about-image-1.png " alt=" " />
+                    </div>
+                    <div class="about__image-wrapper ">
+                        <a href="# " class="about__link ">Метод СВАН</a>
+                        <img class="about__image " src="img/about-image-3.png " alt=" " />
+                    </div>
+                </div>
             </div>
-            <div class="about__image-wrapper">
-              <a href="#" class="about__link">Метод СВАН</a>
-              <img class="about__image" src="img/about-image-3.png" alt="" />
-            </div>
-          </div>
         </div>
-      </div>
     </section>
     <!--.about-->
 
-    <section class="subscribe">
-      <div class="subscribe-container">
-        <h3 class="subscribe__title">Мы всегда открыты к сотрудничеству!</h3>
-        <a href="#" class="subscribe__link">СВЯЗАТЬСЯ С НАМИ</a>
-      </div>
+    <section class="subscribe" id="contacts">
+        <div class="subscribe-container ">
+            <h3 class="subscribe__title ">Мы всегда открыты к сотрудничеству!</h3>
+            <a href="# " class="subscribe__link ">СВЯЗАТЬСЯ С НАМИ</a>
+        </div>
     </section>
     <!--.subscribe-->
 
-    <section class="geography">
-      <div class="geography-container">
-        <h3 class="geography__title">ГЕОГРАФИЯ ДЕЯТЕЛЬНОСТИ</h3>
-        <img src="img/geography-bg.png" alt="" />
-      </div>
+    <section class="geography ">
+        <div class="geography-container ">
+            <h3 class="geography__title ">ГЕОГРАФИЯ ДЕЯТЕЛЬНОСТИ</h3>
+            <img src="img/geography-bg.png " alt=" " />
+        </div>
     </section>
     <!--.geography-->
 
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer__menu">
-          <div class="footer__info">
-            <h3 class="footer__title footer__info--title">Компания</h3>
-            <a href="#" class="footer__info footer__info--link">
-              <img class="footer__logo" src="img/logo-white.png" alt="" />
-            </a>
-            <span class="footer__text">
-              ООО "СИГМА" — геофизическая компания, выполняющая
-              микросейсмические исследования методом МСИ, с целью оценки
-              нефтегазоносности геологических объектов.</span
-            >
-          </div>
-
-          <div class="footer__nav">
-            <div class="footer__menu-group">
-              <h3 class="footer__menu-title">Юридический адрес</h3>
-              <ul class="footer__list">
-                <li class="footer__item">
+    <footer class="footer ">
+        <div class="footer-container ">
+            <div class="footer__menu ">
+                <div class="footer__nav ">
+                    <div class="footer__menu-group ">
+                        <h3 class="footer__title footer__info--title ">Компания</h3>
+                        <a href="# " class="footer__info footer__info--link ">
+                            <img class="footer__logo " src="img/logo-white.svg " alt=" " />
+                        </a>
+                        <span class="footer__text ">
+                ООО "СИГМА " — геофизическая компания, выполняющая
+                микросейсмические исследования методом МСИ, с целью оценки
+                нефтегазоносности геологических объектов.</span
+              >
+            </div>
+            <div class="footer__menu-group ">
+              <h3 class="footer__menu-title ">Юридический адрес</h3>
+              <ul class="footer__list ">
+                <li class="footer__item ">
                   Российская Федерация, Республика Татарстан, 420127, г. Казань,
                   ул. Дементьева 70А, оф.113
                 </li>
               </ul>
             </div>
 
-            <div class="footer__menu-group">
-              <h3 class="footer__menu-title">Реквизиты</h3>
-              <ul class="footer__list">
-                <li class="footer__item">
+            <div class="footer__menu-group ">
+              <h3 class="footer__menu-title ">Реквизиты</h3>
+              <ul class="footer__list ">
+                <li class="footer__item ">
                   ИНН: 1661040597 <br />
                   КПП: 166101001 <br />
                   Расч.счет: 40702810362000003739 в отделении «Банк Татарстан»
@@ -176,32 +171,32 @@
               </ul>
             </div>
 
-            <div class="footer__menu-group">
-              <h3 class="footer__menu-title">Контакты</h3>
-              <ul class="footer__list">
-                <li class="footer__item">
+            <div class="footer__menu-group ">
+              <h3 class="footer__menu-title ">Контакты</h3>
+              <ul class="footer__list ">
+                <li class="footer__item ">
                   <div class="footer__item-wrapper">
-                    <img src="img/map-icon.svg" class="footer__icon" alt="" />
+                    <img src="img/map-icon.svg " class="footer__icon " alt=" " />
                   </div>
                   ООО «СИГМА», а/я 26, 420073, г. Казань, ул. Аделя Кутуя, д.46
                 </li>
-                <li class="footer__item">
-                  <div class="footer__item-wrapper">
+                <li class="footer__item ">
+                  <div class="footer__item-wrapper ">
                     <img
-                      src="img/contact-phone-call.svg"
-                      class="footer__icon"
-                      alt=""
+                      src="img/contact-phone-call.svg "
+                      class="footer__icon "
+                      alt=" "
                     />
                   </div>
-                  <a class="footer__link" href="tel:78432122054"
+                  <a class="footer__link " href="tel:78432122054 "
                     >Тел/факс: +7 (843) 212 20 54</a
                   >
                 </li>
-                <li class="footer__item">
-                  <div class="footer__item-wrapper">
-                    <img src="img/email.svg" class="footer__icon" alt="" />
+                <li class="footer__item ">
+                  <div class="footer__item-wrapper ">
+                    <img src="img/email.svg " class="footer__icon " alt=" " />
                   </div>
-                  <a class="footer__link" href="mailto:info@sigma-geophys.com"
+                  <a class="footer__link " href="mailto:info@sigma-geophys.com "
                     >info@sigma-geophys.com</a
                   >
                 </li>
@@ -213,8 +208,23 @@
     </footer>
     <!--.footer-->
 
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+
+    <div class="mobile">
+      <a href="#" class="mobile__close">
+        <img src="img/close-icon.svg" alt="icon: close" class="mobile__image" />
+      </a>
+      <nav class="mobile__nav">
+        <a href="#" class="mobile__link">Главная</a>
+        <a href="#" class="mobile__link">О компании</a>
+        <a href="#" class="mobile__link">Наши технологии</a>
+        <a href="#" class="mobile__link">Контакты</a>
+        
+        </nav>
+        </div>
+
+        <script src="js/swiper-bundle.min.js "></script>
+        <script src="js/jquery-3.5.1.min.js "></script>
+        <script src="js/main.js "></script>
+</body>
+
 </html>
