--- a/index.html
+++ b/index.html
@@ -33,13 +33,20 @@
                     <li class="navbar__item">
                         <a href="about-company.html" class="navbar__link">О компании</a>
                     </li>
-                    <li class="navbar__item">
-                        <a href="technologies.html" class="navbar__link">Наши технологии</a
-              >
-            </li>
+                    <li class="navbar__item navbar__item--click">
+                        <a href="method-msi.html" class="navbar__link">Наши технологии</a>
+                        <div class="dropdown">
+                            <a href="#" class="dropdown__link">Мониторинг СЭТ на малых площадях</a
+                >
+                <a href="#" class="dropdown__link"
+                  >Мониторинг естественной трещиноватости</a
+                >
+                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+                        </div>
+                    </li>
 
-            <li class="navbar__item">
-              <a href="contacts.html" class="navbar__link">Контакты</a>
+                    <li class="navbar__item">
+                        <a href="contacts.html" class="navbar__link">Контакты</a>
                     </li>
                 </ul>
             </nav>
@@ -94,7 +101,7 @@
             <div class="about__wrapper">
                 <div class="about__wrapper--text">
                     <p class="about__description">
-                        Основанная в 2014 году Михайловым Сергеем Александровичем компания
+                        Основанная в 2014 году
                         <span class="about__name">ООО “СИГМА”</span> является ведущей компанией по проведению пассивного микросейсмического мониторинга.
                     </p>
                     <p class="about__text">
@@ -104,16 +111,19 @@
 
                 <div class="about__wrapper--images">
                     <div class="about__image-wrapper">
-                        <a href="# " class="about__link">Метод МСИ</a>
-                        <img class="about__image" src="img/about-image-2.png " alt=" " />
-                    </div>
+                        <a href="# " class="about__link">Мониторинг СЭТ на малых площадях</a
+              >
+              <img class="about__image" src="img/about-image-2.png " alt=" " />
+            </div>
 
-                    <div class="about__image-wrapper">
-                        <a href="# " class="about__link">Метод ГРП</a>
-                        <img class="about__image" src="img/about-image-1.png " alt=" " />
-                    </div>
-                    <div class="about__image-wrapper">
-                        <a href="# " class="about__link">Метод СВАН</a>
+            <div class="about__image-wrapper">
+              <a href="# " class="about__link"
+                >Мониторинг естественной трещиноватости</a
+              >
+              <img class="about__image" src="img/about-image-1.png " alt=" " />
+            </div>
+            <div class="about__image-wrapper">
+              <a href="# " class="about__link">Мониторинг СВАН</a>
                         <img class="about__image" src="img/about-image-3.png " alt=" " />
                     </div>
                 </div>
@@ -122,7 +132,7 @@
     </section>
     <!--.about-->
 
-    <section class="subscribe" id="contacts ">
+    <section class="subscribe" id="contacts">
         <div class="subscribe-container">
             <h3 class="subscribe__title">Мы всегда открыты к сотрудничеству!</h3>
             <a href="# " class="subscribe__link">СВЯЗАТЬСЯ С НАМИ</a>
@@ -133,7 +143,25 @@
     <section class="geography">
         <div class="geography-container">
             <h3 class="geography__title">ГЕОГРАФИЯ ДЕЯТЕЛЬНОСТИ</h3>
-            <img src="img/geography-bg.png " alt=" " />
+            <div class="geography-wrapper">
+                <img src="img/geography-bg-2.png " alt=" " />
+                <div class="geography__map-container geography__map-container--komi">
+                    <a href="#" class="geography__map-link">
+                        <img src="img/geography-map-icon.svg" class="geography__map-icon" alt="" />
+                    </a>
+                    <div class="geography__map-modal">
+                        <h3 class="geography__modal-title">ООО "Газпром"</h3>
+                    </div>
+                </div>
+                <div class="geography__map-container geography__map-container--sahalin">
+                    <a href="#" class="geography__map-link">
+                        <img src="img/geography-map-icon.svg" class="geography__map-icon" alt="" />
+                    </a>
+                    <div class="geography__map-modal">
+                        <h3 class="geography__modal-title">ООО "Роснефть"</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!--.geography-->
@@ -215,7 +243,7 @@
       </div>
     </footer>
     <!--.footer-->
-
+    <div class="overlay hidden-1"></div>
     <div class="mobile">
       <a href="# " class="mobile__close">
         <img
@@ -234,6 +262,7 @@
 
     <script src="js/swiper-bundle.min.js "></script>
     <script src="js/jquery-3.5.1.min.js "></script>
+    <!-- <script src="js/second.js"></script> -->
     <script src="js/main.js "></script>
   </body>
 </html>
