fixed: sent everything for office desctop

--- a/about-company.html
+++ b/about-company.html
@@ -135,6 +135,12 @@
           </p>
         </div>
       </div>
+
+      <div class="statistics">
+        <div id="out" class="out-num">0</div>
+        <div id="out" class="out-num">0</div>
+        <div id="out" class="out-num">0</div>
+      </div>
     </section>
     <!--.main-info-->
 
