--- a/index.html
+++ b/index.html
@@ -62,70 +62,33 @@
 
     <section class="hero">
         <div class="hero-container">
-            <div class="swiper-container hero__container">
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper hero-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide hero__slide hero__slide--first">
-                        <div class="hero__title hero__title--first">
-                            Микросейсмические исследования нефтегазоносности геологических объектов
-                        </div>
-
-                        <button class="hero__link">Подробнее</button>
-                    </div>
-                    <div class="swiper-slide hero__slide hero__slide--second">
-                        <div class="hero__title hero__title--second">
-                            Решение технологических вызовов нефтедобывающей отрасли методами сейсмометрического мониторинга
-                        </div>
-                        <button class="hero__link">Подробнее</button>
-                        <!-- <a href="technologies.html" class="hero__link">Подробнее</a> -->
-                    </div>
-                    <div class="swiper-slide hero__slide hero__slide--third">
-                        <div class="hero__title hero__title--third">
-                            Всегда навстречу новым горизонтам!
-                        </div>
-                        <button class="hero__link">Подробнее</button>
-                    </div>
-                </div>
-
-                <div class="swiper-button-prev hero__swiper-button"></div>
-                <div class="swiper-button-next hero__swiper-button"></div>
+            <div class="hero__wrapper">
+                <h1 class="hero__title">
+                    Микросейсмические исследования нефтегазоносности геологических объектов
+                </h1>
+                <span class="hero__span">Геофизическая компания, с 2014 года</span>
             </div>
         </div>
     </section>
     <!--.hero-->
 
-    <section class="about" id="about ">
+    <section class="about">
         <div class="about-container">
-            <h3 class="about__title">О нас</h3>
             <div class="about__wrapper">
-                <div class="about__wrapper--text">
-                    <p class="about__description">
-                        Основанная в 2014 году
-                        <span class="about__name">ООО “СИГМА”</span> является ведущей компанией по проведению пассивного микросейсмического мониторинга.
-                    </p>
-                    <p class="about__text">
-                        На основании отечественного и зарубежного опыта компания разработала свой уникальный методологический подход в решении задач по поиску, разведке и уточнению геологических границ месторождений и залежей нефти и газа.
-                    </p>
+                <div class="about__image">
+                    <img src="img/about-oilfield.png" alt="well" />
                 </div>
+                <div class="about__description">
+                    <h2 class="about__title">О СИГМЕ</h2>
 
-                <div class="about__wrapper--images">
-                    <div class="about__image-wrapper">
-                        <a href="# " class="about__link">Мониторинг СЭТ на малых площадях</a
-              >
-              <img class="about__image" src="img/about-image-2.png " alt=" " />
-            </div>
+                    <p class="about__text">
+                        На основании отечественного и зарубежного опыта наша компания разработала свой уникальный методологический подход в решении задач по поиску, разведке и уточнению геологических границ месторождений и залежей нефти и газа, а также повышения эффективности
+                        разработки продуктивных пластов для решения технологических задач нефтегазовой отрасли на основе комплексного анализа геологической среды при проведении сейсмометрического мониторинга.
+                    </p>
 
-            <div class="about__image-wrapper">
-              <a href="# " class="about__link"
-                >Мониторинг естественной трещиноватости</a
-              >
-              <img class="about__image" src="img/about-image-1.png " alt=" " />
-            </div>
-            <div class="about__image-wrapper">
-              <a href="# " class="about__link">Мониторинг СВАН</a>
-                        <img class="about__image" src="img/about-image-3.png " alt=" " />
-                    </div>
+                    <br />
+
+                    <a href="#" class="about__button">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -140,25 +103,91 @@
     </section>
     <!--.subscribe-->
 
+    <section class="methods">
+        <h3 class="methods__title">Наши методы</h3>
+
+        <!-- Slider main container -->
+        <div class="swiper-container methods-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper methods-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide methods-slide">
+                    <div class="methods__image-wrapper">
+                        <img src="img/methods.png" alt="" />
+                    </div>
+                    <div class="methods__text-wrapper">
+                        <h3 class="methods__text-title">
+                            Мониторинг СЭТ на малых площадях
+                        </h3>
+                        <p class="methods__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam hic obcaecati quidem debitis magni fugiat provident repellendus nisi doloribus animi qui ipsam, omnis, ullam sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores repudiandae
+                            ratione consequatur tenetur error vero quo asperiores fugiat corporis deleniti, dolorum eaque saepe quod. Quam, delectus a?
+                        </p>
+                        <a href="#" class="methods__button">Подробнее</a>
+                    </div>
+                </div>
+                <div class="swiper-slide methods-slide">
+                    <div class="methods__image-wrapper">
+                        <img src="img/methods.png" alt="" />
+                    </div>
+                    <div class="methods__text-wrapper">
+                        <h3 class="methods__text-title">
+                            Мониторинг естественной трещиноватости
+                        </h3>
+                        <p class="methods__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam hic obcaecati quidem debitis magni fugiat provident repellendus nisi doloribus animi qui ipsam, omnis, ullam sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores repudiandae
+                            ratione consequatur tenetur error vero quo asperiores fugiat corporis deleniti, dolorum eaque saepe quod. Quam, delectus a?
+                        </p>
+                        <a href="#" class="methods__button">Подробнее</a>
+                    </div>
+                </div>
+                <div class="swiper-slide methods-slide">
+                    <div class="methods__image-wrapper">
+                        <img src="img/methods.png" alt="" />
+                    </div>
+                    <div class="methods__text-wrapper">
+                        <h3 class="methods__text-title">Мониторинг СВАН</h3>
+                        <p class="methods__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam hic obcaecati quidem debitis magni fugiat provident repellendus nisi doloribus animi qui ipsam, omnis, ullam sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores repudiandae
+                            ratione consequatur tenetur error vero quo asperiores fugiat corporis deleniti, dolorum eaque saepe quod. Quam, delectus a?
+                        </p>
+                        <a href="#" class="methods__button">Подробнее</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <!-- If we need scrollbar -->
+            <div class="swiper-scrollbar"></div>
+        </div>
+    </section>
+    <!--.methods-->
+
     <section class="geography">
         <div class="geography-container">
             <h3 class="geography__title">ГЕОГРАФИЯ ДЕЯТЕЛЬНОСТИ</h3>
             <div class="geography-wrapper">
                 <img src="img/geography-bg-2.png " alt=" " />
                 <div class="geography__map-container geography__map-container--komi">
-                    <a href="#" class="geography__map-link">
-                        <img src="img/geography-map-icon.svg" class="geography__map-icon" alt="" />
+                    <a href="# " class="geography__map-link">
+                        <img src="img/geography-map-icon.svg " class="geography__map-icon" alt=" " />
                     </a>
                     <div class="geography__map-modal">
-                        <h3 class="geography__modal-title">ООО "Газпром"</h3>
+                        <h3 class="geography__modal-title">ООО "Газпром "</h3>
                     </div>
                 </div>
                 <div class="geography__map-container geography__map-container--sahalin">
-                    <a href="#" class="geography__map-link">
-                        <img src="img/geography-map-icon.svg" class="geography__map-icon" alt="" />
+                    <a href="# " class="geography__map-link">
+                        <img src="img/geography-map-icon.svg " class="geography__map-icon" alt=" " />
                     </a>
                     <div class="geography__map-modal">
-                        <h3 class="geography__modal-title">ООО "Роснефть"</h3>
+                        <h3 class="geography__modal-title">ООО "Роснефть "</h3>
                     </div>
                 </div>
             </div>
@@ -253,8 +282,8 @@
         />
       </a>
       <nav class="mobile__nav">
-        <a href="index.html" class="mobile__link">Главная</a>
-        <a href="about-company.html" class="mobile__link">О компании</a>
+        <a href="index.html " class="mobile__link">Главная</a>
+        <a href="about-company.html " class="mobile__link">О компании</a>
         <a href="# " class="mobile__link">Наши технологии</a>
         <a href="# " class="mobile__link">Контакты</a>
       </nav>
@@ -262,7 +291,7 @@
 
     <script src="js/swiper-bundle.min.js "></script>
     <script src="js/jquery-3.5.1.min.js "></script>
-    <!-- <script src="js/second.js"></script> -->
+    <!-- <script src="js/second.js "></script> -->
     <script src="js/main.js "></script>
   </body>
 </html>
